// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextPrevLinks renders correctly 1`] = `
<DocumentFragment>
  <section
    class="c-next-prev-links c-content-group"
    css="[object Object]"
  >
    <p
      class="c-next-prev-links__prev "
    >
      <svg
        class="u-fill--secondary u-stroke--secondary c-next-prev-links__arrow c-next-prev-links__arrow--prev"
        viewBox="0 0 477.175 477.175"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M360.731 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"
        />
      </svg>
      Previous post
      <br />
      <a
        class="c-link u-clr--secondary"
        css="[object Object]"
        href="/blog/roll-your-own-scss-grid"
      >
        Roll Your Own: SCSS Grid
      </a>
    </p>
    <p
      class="c-next-prev-links__next "
    >
      Next post
      <svg
        class="u-fill--secondary u-stroke--secondary c-next-prev-links__arrow c-next-prev-links__arrow--next"
        viewBox="0 0 477.175 477.175"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M360.731 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"
        />
      </svg>
      <br />
      <a
        class="c-link u-clr--secondary"
        css="[object Object]"
        href="/blog/roll-your-own-react-tabs"
      >
        Roll Your Own: React Tabs
      </a>
    </p>
  </section>
</DocumentFragment>
`;

exports[`NextPrevLinks renders correctly without a next link prop 1`] = `
<DocumentFragment>
  <section
    class="c-next-prev-links c-content-group"
    css="[object Object]"
  >
    <p
      class="c-next-prev-links__prev c-next-prev-links--only"
    >
      <svg
        class="u-fill--secondary u-stroke--secondary c-next-prev-links__arrow c-next-prev-links__arrow--prev"
        viewBox="0 0 477.175 477.175"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M360.731 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"
        />
      </svg>
      Previous post
      <br />
      <a
        class="c-link u-clr--secondary"
        css="[object Object]"
        href="/blog/roll-your-own-scss-grid"
      >
        Roll Your Own: SCSS Grid
      </a>
    </p>
  </section>
</DocumentFragment>
`;

exports[`NextPrevLinks renders correctly without a prev link prop 1`] = `
<DocumentFragment>
  <section
    class="c-next-prev-links c-content-group"
    css="[object Object]"
  >
    <p
      class="c-next-prev-links__next c-next-prev-links--only"
    >
      Next post
      <svg
        class="u-fill--secondary u-stroke--secondary c-next-prev-links__arrow c-next-prev-links__arrow--next"
        viewBox="0 0 477.175 477.175"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M360.731 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"
        />
      </svg>
      <br />
      <a
        class="c-link u-clr--secondary"
        css="[object Object]"
        href="/blog/roll-your-own-react-tabs"
      >
        Roll Your Own: React Tabs
      </a>
    </p>
  </section>
</DocumentFragment>
`;
